0032557: Modeling Data - Use of BRepBuilderAPI_NurbsConvert create 2d p-curves with errors

BRepTools/BRepTools_NurbsConvertModification.cxx -
 Checking domain of 2dCurves if surfaces are periodic is improved

tests/bugs/moddata_3/bug32557 - test case added